Feature : Bean collection added in homepage, Logo added in Nabar and footer, Hamburger-menu logo added

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -11,6 +11,15 @@
   }
 }
 
+.logo {
+  max-width: 33px;
+  max-height: 218px;
+  @media (min-width: $media-tablet) {
+    max-width: 26px;
+    max-height: 236px;
+  }
+}
+
 .links_container {
   @include flex-column-center;
   font-size: var(--md-body-fs);
