Feature : Payment Model Updated

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,7 @@ $media-desktop: 1140px;
   --medium-grey-400: #83888f;
   --light-orange-200: #fdd6ba;
   --light-cream-100: #fefcf7;
+  --yellow-thunder-500: #f9d851;
 
   //headings
   --xl-header-fs: 40px;
