Feature : Dynamic pricing for coffee added, changes in home image

--- a/styles/How.module.scss
+++ b/styles/How.module.scss
@@ -21,6 +21,8 @@
     margin-bottom: 24px;
   }
   p {
+    text-align: justify;
+    text-justify: inter-word;
     font-size: var(--md-body-fs);
   }
 }
