--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,6 +10,7 @@ $media-desktop: 1140px;
 :root {
   --dark-greyblue-900: #333d4b;
   --dark-cyan-600: #0e8784;
+  --light-cyan-600: #00b8b8;
   --medium-grey-400: #83888f;
   --light-orange-200: #fdd6ba;
   --light-cream-100: #fefcf7;
